fixed overlapping issue

--- a/css/layout.css
+++ b/css/layout.css
@@ -10,25 +10,22 @@
     height: 100%;
     position: fixed;
     top: 0;
-    left: 0;
-    overflow: auto;
+    overflow-x: hidden;
 }
+
 .sidebar a{
     display: block;
     text-align: center;
     padding: 50%;
     padding-left: 0%;
     transition: all 0.3s ease;
-    font-size: 50px;
+    font-size: 70px;
     color: white;
+    text-decoration: none
 }
 
-.sidebar p{
-    color: white;
-}
 .sidebar a:hover{
-
-    background-color:beige;
+    background-color:rgb(206, 201, 201);
 }
 
 .home{
@@ -45,49 +42,38 @@
 .aboutme{
     display: flex;
     flex-direction: row;
-    /* align-items: center; */
+    align-items: center;
     text-align: center;
     width: 100%;
     height: 100vh;
     color: white;
     font-size: large;
-    padding-bottom: 10%;
+    
 }
 .aboutme_text{
     padding: 8%;
+    padding-bottom: 13%;
 }
 .aboutme p{
     font-size: xx-large;
 }
-.image{
-    padding-top: 10%;
-}
-
 .project{
-    width: 90%;
+    width: 100%;
     height: 100vh;
     color: white;
     font-size: large;
     display: grid;
-    grid-template-columns: repeat(2, 5fr);
+    grid-template-columns: repeat(2, 4fr);
+    padding-top: 70px;
 }
 .container > div{
-    background-size: cover;
-   background-attachment: fixed;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: center;
-   transition: all 0.3s ease-in;
-   padding-bottom: 2px;
+   padding-bottom: 4px;
 }
-
-.container > div:hover{
-    transform: scale(0.85);
-}
-
-
 .contact{
     width: 100%;
     height: 100vh;
@@ -134,10 +120,4 @@ input[type=text], select, textarea {
     border: 3px solid white;
     border-radius: 4px;
     resize: vertical;
-}
-.footer{
-
-    background-color: blue;
-    color: aqua;
-    padding: 50%;
 }
